Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -479,20 +479,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "\n",
     "def remove_movies_missing_data(movies):\n",
-    "    filtered_movies = list(filter(lambda movie: math.isnan(movie['domgross_2013$']), movies))\n",
+    "    filtered_movies = list(map(lambda movie: math.isnan(movie['domgross_2013$']), movies))\n",
     "    return filtered_movies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -510,16 +510,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "18"
+       "1794"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
